[project]
name = "earth-engine-geospatial"
version = "0.1.0"
description = "An Earth Engine enabled ADK agent for geospatial land cover change analysis."
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-adk>=1.0.0",
    "earthengine-api",
    "numpy",
    "google-auth",
    "google-api-core",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.6",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["earth_engine_geospatial"]

[tool.hatch.build.targets.wheel]
packages = ["earth_engine_geospatial"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
