[project]
name = "fomc-research"
version = "0.1.0"
description = "FOMC Research Agent Demo using Google ADK"
authors = [
    { name = "Mike Styer", email = "styer@google.com" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "absl-py>=2.2.1",
    "diff-match-patch>=20241021",
    "google-adk>=1.0.0",
    "google-cloud-bigquery>=3.30.0",
    "google-genai>=1.5.0",
    "pdfplumber>=0.11.5",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "scikit-learn>=1.6.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "google-adk[eval]>=1.0.0",
    "nest-asyncio>=1.6.0",
    "agent-starter-pack>=0.14.1",
]

[tool.ruff]
# Points back to the Master template in the root
extend = "../../../pyproject.toml"

[tool.ruff.lint]
# Ignores function complication rule
ignore = ["C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Categorizes the local package for correct import sorting
known-first-party = ["fomc_research"]

[tool.hatch.build.targets.wheel]
# Ensures Hatchling finds the package folder correctly
packages = ["fomc_research"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agent-starter-pack]
example_question = "Analyze the most recent FOMC meeting and provide a summary of the key decisions and market implications."
deployment_targets = ["agent_engine", "cloud_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"