[project]
name = "fun-facts"
version = "0.1.0"
description = "The agent uses the **Gemini** model and **Google Search** grounding to provide wacky and interesting fun facts about any topic you provide."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.28.0",
    "google-auth>=2.49.1",
    "python-dotenv>=1.2.2",
]
