[project]
name = "cookie-scheduler-agent"
version = "0.1.0"
description = "AI agent for scheduling cookie deliveries using BigQuery, Vertex AI, and LangGraph"
authors = [
    { name = "Google LLC" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-adk>=1.13.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.118.0",
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.39.1",
    "langchain>=0.3.27",
    "langgraph>=0.3.34",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "mcp>=1.13.1",
    "sqlalchemy>=2.0.43",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-logging>=3.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "nest-asyncio>=1.6.0",
    "agent-starter-pack>=0.32.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.17.1",
    "codespell>=2.2.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = ["C901", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["cookie_scheduler_agent"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agent-starter-pack]
example_question = "Process the latest cookie delivery order"

[tool.agent-starter-pack.settings]
agent_directory = "cookie_scheduler_agent"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
