[project]
name = "high-volume-document-analyzer"
version = "0.1.0"
description = "The High-Volume Document Analyzer Agent queries and synthesizes information from a large corpus of internal documents (legal statutes, process manuals, etc.)"
authors = [
    { name = "Mikaeri Ohana", email = "mikaeri@google.com" },
    { name = "Afonso Menegola", email = "afonsomenegola@google.com" },
]
maintainers = [
    { name = "Mikaeri Ohana", email = "mikaeri@google.com" },
]

license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "google-adk>=1.28.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "opentelemetry-instrumentation-google-genai==0.4b0",
    "python-dotenv>=1.0.1",
    "reportlab==4.2.0",
    "pypdf==6.9.2",
    "requests==2.32.4",
    "pandas==2.3.3",
    "beautifulsoup4==4.14.3",
    "aiohttp==3.13.4",
]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.28.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "agent-starter-pack>=0.14.1",
    "flask>=3.1.3",
    "ruff>=0.4.6",
    "mypy>=1.15.0",
    "codespell>=2.2.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20240914",
]


[tool.ruff]
extend = "../../../pyproject.toml"
target-version = "py311"


[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["high_volume_document_analyzer"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]

exclude = [".venv"]

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

# This configuration file is used by goo.gle/agent-starter-pack to power remote templating.
# It defines the template's properties and settings.
[tool.agent-starter-pack]
example_question = "Analyze documents for collection 12345"

[tool.agent-starter-pack.settings]
agent_directory = "high_volume_document_analyzer"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true